tests/spec/emit/snapshots/return_unit_function_block_side_effects.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:fmt"
  
  fn side() -> int { fmt.Println("side"); 1 }
  
  fn main() {
    return {
      let _ = side()
      ()
    }
  }
---
package main

import "fmt"

func side() int {
	fmt.Println("side")
	return 1
}

func main() {
	{
		side()
	}
	return
}
