tests/spec/emit/snapshots/return_unit_function_preserves_side_effects.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn foo() {
    let _ = 1
  }
  
  fn main() {
    return foo()
  }
---
package main

func foo() {}

func main() {
	foo()
	return
}
