tests/spec/emit/snapshots/select_arm_binding_does_not_leak.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let x = 100
    fmt.Println(x)
    let x = 200
  
    let ch = Channel.buffered<int>(1)
    ch.send(99)
  
    select {
      let Some(x) = ch.receive() => fmt.Println(x),
      _ => fmt.Println("default"),
    }
  
    fmt.Println(x)
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	x := 100
	fmt.Println(x)
	x_1 := 200
	ch := make(chan int, 1)
	lisette.ChannelSend(ch, 99)
	ch_2 := ch
	for {
		select {
		case x, ok := <-ch_2:
			if ok {
				fmt.Println(x)
			} else {
				ch_2 = nil
				continue
			}
		default:
			fmt.Println("default")
		}
		break
	}
	fmt.Println(x_1)
}
