tests/spec/emit/snapshots/select_break_in_loop_needs_label.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let ch = Channel.buffered<string>(1)
    ch.send("hello")
  
    loop {
      select {
        let Some(msg) = ch.receive() => {
          fmt.Println(msg)
          break
        },
        _ => break,
      }
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ch := make(chan string, 1)
	lisette.ChannelSend(ch, "hello")
loop_1:
	for {
		ch_1 := ch
		for {
			select {
			case msg, ok := <-ch_1:
				if ok {
					fmt.Println(msg)
					break loop_1
				} else {
					ch_1 = nil
					continue
				}
			default:
				break loop_1
			}
		}
	}
}
