tests/spec/emit/snapshots/select_closed_shorthand_receive_does_not_steal.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn test() -> int {
    let closed = Channel.new<int>()
    closed.close()
    let sink = Channel.buffered<int>(1)
    select {
      let Some(_x) = closed.receive() => 10,
      sink.send(5) => 20,
      _ => 30,
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	closed := make(chan int)
	lisette.ChannelClose(closed)
	sink := make(chan int, 1)
	ch := closed
	for {
		select {
		case _, ok := <-ch:
			if ok {
				return 10
			}
			ch = nil
			continue
		case sink <- 5:
			return 20
		default:
			return 30
		}
	}
}
