tests/spec/emit/snapshots/select_complex_channel_expression_hoisted.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn main() {
    let ch1 = Channel.buffered<int>(1)
    let ch2 = Channel.buffered<int>(1)
    ch1.send(1)
    ch2.send(2)
    let flag = true
    let ch = if flag { ch1 } else { ch2 }
    select {
      let Some(v) = ch.receive() => {
        let _ = v
      },
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	ch1 := make(chan int, 1)
	ch2 := make(chan int, 1)
	lisette.ChannelSend(ch1, 1)
	lisette.ChannelSend(ch2, 2)
	flag := true
	var ch chan int
	if flag {
		ch = ch1
	} else {
		ch = ch2
	}
	ch_1 := ch
	for {
		select {
		case v, ok := <-ch_1:
			if ok {
				_ = v
			} else {
				ch_1 = nil
				continue
			}
		}
		break
	}
}
