tests/spec/emit/snapshots/select_continue_in_default_arm_needs_label.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn main() {
    let ch = Channel.buffered<int>(1)
    let mut skipped = 0
    for i in 0..2 {
      if i == 1 {
        ch.send(7)
      }
      select {
        let Some(_x) = ch.receive() => {},
        _ => {
          skipped += 1
          continue
        },
      }
    }
    if skipped != 1 {
      panic(f"expected 1 skip, got {skipped}")
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ch := make(chan int, 1)
	skipped := 0
loop_1:
	for i := range 2 {
		if i == 1 {
			lisette.ChannelSend(ch, 7)
		}
		ch_1 := ch
		for {
			select {
			case _, ok := <-ch_1:
				if !ok {
					ch_1 = nil
					continue
				}
			default:
				skipped++
				continue loop_1
			}
			break
		}
	}
	if skipped != 1 {
		panic(fmt.Sprintf("expected 1 skip, got %d", skipped))
	}
}
