tests/spec/emit/snapshots/select_continue_without_retry_loop_unlabeled.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn main() {
    let ch = Channel.buffered<int>(2)
    ch.send(1)
    ch.send(2)
    let mut total = 0
    for _ in 0..2 {
      select {
        match ch.receive() {
          Some(x) => {
            if x == 1 {
              continue
            }
            total += x
          },
          None => {},
        },
        _ => {
          total += 100
        },
      }
    }
    if total != 2 {
      panic(f"expected 2, got {total}")
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ch := make(chan int, 2)
	lisette.ChannelSend(ch, 1)
	lisette.ChannelSend(ch, 2)
	total := 0
	for range 2 {
		select {
		case x, ok := <-ch:
			if ok {
				if x == 1 {
					continue
				}
				total += x
			}
		default:
			total += 100
		}
	}
	if total != 2 {
		panic(fmt.Sprintf("expected 2, got %d", total))
	}
}
