tests/spec/emit/snapshots/select_hoist_temp_no_collision.snap
---
source: tests/spec/emit/concurrency.rs
description: |
  
  fn get_ch() -> Channel<int> {
    Channel.buffered<int>(1)
  }
  
  fn main() -> int {
    let result = select {
      let Some(v) = get_ch().receive() => v,
      _ => 0,
    }
    let tmp_1 = result + 1
    tmp_1
  }
---
package main

func getCh() chan int {
	return make(chan int, 1)
}

func main() int {
	var result int
	ch := getCh()
	for {
		select {
		case v, ok := <-ch:
			if ok {
				result = v
			} else {
				ch = nil
				continue
			}
		default:
			result = 0
		}
		break
	}
	tmp_1 := result + 1
	return tmp_1
}
